# env

./: .gitignore  MacOS_Notes.md  README.md  dev3-requirements.txt  setup-fish.fish  setup-home.py  sys3-requirements.txt  upgrade-packages.sh
home/: .aliases.sh  .bash_profile  .bashrc  .cookiecutterrc  .gitconfig  .gitignore_global  .p10k.zsh  .paths.sh  .profile  .terraformrc  .zprofile  .zshrc  bashrc-macos.sh
home/.claude/: settings.json
home/.config/: flake8
home/.config/agents/: AGENTS.md
home/.config/fish/: config.fish  fishfile
home/.config/fish/functions/: bobthefish_colors.fish  swift.fish
home/.config/powershell/: profile.ps1
home/.gnupg/: gpg-agent.conf
home/.matplotlib/: matplotlibrc
macos/: Brewfile
macos/apps/Terminal/: Cisco.terminal
macos/apps/iTerm/: com.googlecode.iterm2.plist
python/: dev2-requirements.txt  dev3-requirements.txt  sys3-requirements.txt
python/system-packages/: pyproject.toml
