[project]
name = "system-packages"
version = "0.1.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
awsipranges = "^0.3.3"
boto3 = "^1.37.36"
boto3-stubs = "^1.37.36"
botocore-stubs = "^1.37.29"
ipython = "^9.1.0"
mypy = "^1.15.0"
python = "^3.13"
pyyaml = "^6.0.2"
requests = "^2.32.3"
ruff = "^0.11.6"
torch = "^2.6.0"
torchaudio = "^2.6.0"
torchvision = "^0.21.0"
webexpythonsdk = "^2.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
